--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "react-homework-template",
   "version": "0.1.0",
-  "private": false,
+  "private": true,
   "homepage": "https://alenfador2.github.io/goit-react-hw-02-phonebook/",
   "dependencies": {
     "@testing-library/jest-dom": "^5.16.3",
